[package]
name = "oranger"
version = "0.1.0"
authors = ["Andrew Moss <andrew@m0ss.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
raster = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]